--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     def moshi_version = "1.11.0"
     implementation "com.squareup.moshi:moshi:$moshi_version"
